Begin back_end API

--- a/WorkWithUsersAPI/Web.config
+++ b/WorkWithUsersAPI/Web.config
@@ -11,7 +11,15 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WorkWithUsersAPI-20190118060158.mdf;Initial Catalog=aspnet-WorkWithUsersAPI-20190118060158;Integrated Security=True"
+    <add name="DefaultConnection" 
+         connectionString=" Data Source=DESKTOP-02MG1I2\SERVERSQL;
+                            Initial Catalog=UsersDB;
+                            User ID=admin;Password=dgd4l78;
+                            Connect Timeout=30;
+                            Encrypt=False;
+                            TrustServerCertificate=False;
+                            ApplicationIntent=ReadWrite;
+                            MultiSubnetFailover=False"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
