--- a/WorkWithUsersAPI/Web.config
+++ b/WorkWithUsersAPI/Web.config
@@ -9,7 +9,21 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString=" Data Source=DESKTOP-02MG1I2\SERVERSQL;                             Initial Catalog=UsersDB;                             User ID=admin;Password=dgd4l78;                             Connect Timeout=30;                             Encrypt=False;                             TrustServerCertificate=False;                             ApplicationIntent=ReadWrite;                             MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" 
+         connectionString=" Data Source=DESKTOP-02MG1I2\SERVERSQL;   
+         Initial Catalog=UsersDB;                            
+         User ID=admin;Password=dgd4l78;                          
+         Connect Timeout=30;                             
+         Encrypt=False;                             
+         TrustServerCertificate=False;                            
+         ApplicationIntent=ReadWrite;                            
+         MultiSubnetFailover=False" 
+         providerName="System.Data.SqlClient" />-->
+
+    <add name="DefaultConnection"
+         connectionString="Data Source=92.52.137.79;Initial Catalog=UserDB;User ID=root;Password=dgd4l78"
+         providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings />
   <!--
